--- a/app/Resources/views/landing/add_preference.html.twig
+++ b/app/Resources/views/landing/add_preference.html.twig
@@ -6,7 +6,7 @@
         <div class="card default-color-dark ">
             {% if not posteNonExistant %}
                 {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
-                    <p class="h4 mb-2 text-center">Rejoindre un raid comme bénévole</p>
+                    <p class="h4 mb-2 text-center">Ajouter une préférence de poste</p>
 
                     <div class="form-row mb-4">
                         <div class="col">
@@ -16,18 +16,16 @@
 
                     <div class="form-row mb-4">
                         <div class="col">
-                            <button class="btn btn-info my-4 btn-block" type="submit"> Nous rejoindre</button>
+                            <button class="btn btn-info my-4 btn-block" type="submit">Confirmer</button>
                         </div>
                         <div class="col">
-                            <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
+                            <button class="btn my-4 btn-block" type="reset">Réinitialiser</button>
                         </div>
                     </div>
-                    {{ form_end(form) }}
-                {% else %}
-                    <p class="h4 mb-2 text-center p-4">Aucun poste n'est disponible pour ce raid.</p>
-                    <a class="btn btn-info my-4 btn-block" href="{{ path('landing') }}">Retour à la page d'accueil </a>
-                {% endif %}
-
+                {{ form_end(form) }}
+            {% else %}
+                <p class="h4 mb-2 text-center p-4">Aucun poste n'est disponible pour ce raid.</p>
+            {% endif %}
         </div>
     </div>
 </div>
