fix: pref postes

--- a/app/Resources/views/raid/postes_benevoles.html.twig
+++ b/app/Resources/views/raid/postes_benevoles.html.twig
@@ -39,8 +39,7 @@
                 </ul>
         {% else %}
                 <p>
-                        Vous n'êtes pas encore choisi pour un poste
-                        <a href="{{ path('landing') }}">Retour à la page d'accueil </a>
+                        L'organisateur ne vous a pas encore affecté à un poste.
                 </p>
         {% endif %}
 
