--- a/web/css/own_style_sed.css
+++ b/web/css/own_style_sed.css
@@ -52,15 +52,16 @@
 
 .sortable_item {
     cursor : move;
-    width : 100%;
-    border: grey 1px solid;
+    text-align:center;
     border-radius: 5px;
-    margin:0.2rem;
+    border: grey 1px solid;
     list-style : none;
+    padding:2rem;
+    margin:0.2rem;
+    width : 100%;
 }
 
 .ul_style {
-        
     list-style-type : none;
     margin : 0;
     padding : 0;
