--- a/web/css/own_style_sed.css
+++ b/web/css/own_style_sed.css
@@ -66,3 +66,10 @@
     margin : 0;
     padding : 0;
 }
+
+.retour_map{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+}
