--- a/app/Resources/views/auth/register.html.twig
+++ b/app/Resources/views/auth/register.html.twig
@@ -2,23 +2,21 @@
 
 {% block content %}
 <div class='vertical-center'>
-<div class='container col col-md-4'>
+<div class='container col col-sm-8 col-md-6 col-xl-4'>
 <div class="card default-color-dark">
 {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
 
-{% for message in app.flashes('notice') %}
-    <div class="alert alert-danger">
-        {{ message }}
-    </div>
-{% endfor %}
-
-
-{% for message in app.flashes('error') %}
-    <div class="alert alert-warning">
-        {{ message }}
-    </div>
-{% endfor %}
-
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success" role="alert">
+                {{ message }}
+        </div>
+    {% endfor %}
+    {% for message in app.flashes('error') %}
+            <div class="alert alert-danger" role="alert">
+                    {{ message }}
+            </div>
+    {% endfor %}
+    
     <p class="h4 mb-4 text-center">Créer un compte</p>
     <div class="form-row mb-4">
         <div class="col">
