--- a/app/Resources/views/landing/inviter_benevole.html.twig
+++ b/app/Resources/views/landing/inviter_benevole.html.twig
@@ -4,7 +4,7 @@
 <div class='vertical-center'>
 
     {% if est_organisateur %}
-        <div class="container col col-sm-8 col-md-4">
+        <div class="container col col-sm-8 col-md-6 col-lg-4">
             <div class="card default-color-dark ">
                 {% for message in app.flashes('success') %}
                     <div class="alert alert-success" role="alert">
