--- a/app/Resources/views/raid/description_raid_organisateur.html.twig
+++ b/app/Resources/views/raid/description_raid_organisateur.html.twig
@@ -67,5 +67,6 @@
     {% endif %}
 </div>
 
+<script src={{asset('js/FileSaver.js')}}></script>
 <script src={{asset('js/export_gpx.js')}}></script>
 {% endblock %}
