--- a/app/Resources/views/raid/new.html.twig
+++ b/app/Resources/views/raid/new.html.twig
@@ -4,6 +4,18 @@
 <div class='vertical-center'>
     <div class="container col col-md-4">
             <div class="card default-color-dark ">
+
+              {% for message in app.flashes('success') %}
+                <div class="alert alert-success" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+            {% for message in app.flashes('error') %}
+                <div class="alert alert-danger" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+
                 {{ form_start(raid, {'attr': {'class': 'center border border-light p-5'}}) }}
 
                 {% for message in app.flashes('notice') %}
