--- a/web/css/own_style_sed.css
+++ b/web/css/own_style_sed.css
@@ -73,3 +73,12 @@
     left: 0;
     z-index: 1000;
 }
+
+.form-poste {
+    position: absolute;
+    background-color: white;
+    padding:2rem;
+    top: 20%;
+    left: 40%;
+    z-index: 1000;
+}
