fix: affichage poste

--- a/app/Resources/views/default/map_interactive.html.twig
+++ b/app/Resources/views/default/map_interactive.html.twig
@@ -40,7 +40,7 @@
                 <img src={{asset('images/loader.gif')}}>
             </div>
 
-            <form class="form-poste">
+            <form class="form-poste" style="display:none;">
                 <div class="form-group row">
                     <label for="choix-trace" class="col-sm-4 col-form-label">Choix du tracé</label>
                     <select id="choix-trace" name="choix-trace" class="form-control col-sm-8"></select>
