fix: add script algo

--- a/app/Resources/views/raid/description_raid_organisateur.html.twig
+++ b/app/Resources/views/raid/description_raid_organisateur.html.twig
@@ -70,4 +70,5 @@
 
 <script src={{asset('js/FileSaver.js')}}></script>
 <script src={{asset('js/export_gpx.js')}}></script>
+<script src={{asset('js/algorithme_repartitions.js')}}></script>
 {% endblock %}
