refactor: ajout log function juste pour la beauté du geste

--- a/app/Resources/views/default/map_interactive.html.twig
+++ b/app/Resources/views/default/map_interactive.html.twig
@@ -27,7 +27,7 @@
     <script type="text/javascript">
         var asset_images = "{{asset('images')}}";
     </script>
-    <script src={{asset('js/carte.js')}}></script>
+    <script type="module" src={{asset('js/carte.js')}}></script>
 {% endblock %}
 
 
