--- a/app/Resources/views/landing/index.html.twig
+++ b/app/Resources/views/landing/index.html.twig
@@ -31,7 +31,7 @@
     {% endif %}
 
       <a href= {{ path('create_raid') }}>
-        Créer mon RAID
+        Créer un nouveau RAID
         <i class="fas fa-2x fa-plus-circle"></i>
       </a>
     </ul>
