--- a/app/Resources/views/raid/postes_benevoles.html.twig
+++ b/app/Resources/views/raid/postes_benevoles.html.twig
@@ -61,5 +61,5 @@
         <a href="{{ path('ajouter_preference', {'id_raid': raid.id}) }}">Ajouter une préférence</a>
 </div>
 
-<script src={{ asset('js/preferences_benevoles.js') }}></script>
+<script type="module" src={{ asset('js/preferences_benevoles.js') }}></script>
 {% endblock %}
