--- a/app/Resources/views/raid/description_raid_organisateur.html.twig
+++ b/app/Resources/views/raid/description_raid_organisateur.html.twig
@@ -46,7 +46,7 @@
                         <div class="input-group-prepend">
                             <label class="input-group-text">{{ repartition.idBenevole.idUser.username }}</label>
                         </div>
-                        <select class="custom-select attribution-poste"
+                        <select size="3" class="custom-select attribution-poste"
                             data-id-raid={{raid.id}} 
                             data-id-user={{repartition.idBenevole.idUser.id}}
                             data-id-poste={{repartition.idPoste.id}}
@@ -59,7 +59,7 @@
         {% else %}
             <p>Aucun bénévole n'a été affecté à un poste pour le moment</p>
         {% endif %}
-        <button id={{raid.id}} type="submit" class="btn Algorithme">Répartir automatiquement les bénévoles</button>
+        <button id="{{raid.id}}" type="submit" class="btn Algorithme">Répartir automatiquement les bénévoles</button>
     {% else %}
         <div class="alert alert-danger" role="alert">
             Vous n'êtes pas organisateur de ce RAID.<br>
@@ -69,6 +69,6 @@
 </div>
 
 <script src={{asset('js/FileSaver.js')}}></script>
-<script src={{asset('js/export_gpx.js')}}></script>
-<script src={{asset('js/algorithme_repartitions.js')}}></script>
+<script type="module" src={{asset('js/export_gpx.js')}}></script>
+<script type="module" src={{asset('js/algorithme_repartitions.js')}}></script>
 {% endblock %}
