fix:remove useless toolbar

--- a/app/Resources/views/default/map_interactive.html.twig
+++ b/app/Resources/views/default/map_interactive.html.twig
@@ -23,6 +23,7 @@
     <script src="https://unpkg.com/togeojson@0.16.0"></script>
     <script src="https://unpkg.com/leaflet-filelayer@1.2.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js" integrity="sha256-bu/BP02YMudBc96kI7yklc639Mu4iKGUNNcam8D2nLc=" crossorigin="anonymous"></script>
+    <script src="https://api.ign.fr/geoportail/api/js/2.1.1/GeoportalExtended.js"></script>
 
     <script type="text/javascript">
         var asset_images = "{{asset('images')}}";
